# fastapi_clean_architecture

./: main.py  pyproject.toml
src/: main.py
src/auth/: models.py  service.py
src/database/: core.py
src/users/: controller.py  service.py
